--- a/MRM/Views/ChildList/ChildList.cshtml
+++ b/MRM/Views/ChildList/ChildList.cshtml
@@ -20,6 +20,24 @@
             font-size: 1.2em;
             font-weight: bold;
         }
+
+        .btn-edit {
+            width: 50px !important;
+            float: left;
+        }
+
+        .btn-view {
+            width: 50px !important;
+            float: left;
+            margin-top: 0% !important;
+            margin-left: 3%;
+        }
+
+        .btn-delete {
+            width: 50px !important;
+            float: right;
+            margin-top: 0% !important;
+        }
     </style>
 </head>
 <body>
@@ -34,11 +52,11 @@
                             <tr>
                                 <th>Sub Campaign ID</th>
                                 <th>Name</th>
-                                <th style="width:400px">Sub Campaign Description</th>
+                                <th style="width:30%">Sub Campaign Description</th>
                                 <th>Status</th>
-                                <th>Start Date</th>
-                                <th>End Date</th>
-                                <th>Action</th>
+                                <th style="width:10%;">Start Date</th>
+                                <th style="width:10%;">End Date</th>
+                                <th style="width:16%;">Action</th>
                             </tr>
                         </thead>
                         @foreach (var item in Model.ChildCampaigns)
@@ -49,16 +67,18 @@
                                     <td>@Html.ActionLink((item.Name), "TacticListById", "TacticList", new { Id = item.Id }, null)</td>
                                     <td>@item.CampaignDescription</td>
                                     <td>@item.Status</td>
-                                    <td>@item.StartDate</td>
-                                    <td>@item.EndDate</td>
+                                    <td>@item.StartDate.ToString("dd-MM-yyyy")</td>
+                                    <td>@item.EndDate.ToString("dd-MM-yyyy")</td>
                                     <td>
-                                        <input type="button" class="btn btn-block btn-danger btn-sm" value="Delete" onclick="location.href='@Url.Action( "MasterCampaign", "MasterCampaign")'" />
+                                        <input type="button" class="btn btn-block btn-primary btn-sm btn-edit" value="Edit" onclick="location.href='@Url.Action( "ChildCampaign", "ChildCampaign", new { Id = item.Id })'" />
+                                        <input type="button" class="btn btn-block btn-primary btn-sm btn-view" value="View" onclick="location.href='@Url.Action( "ChildList", "ChildList", new { Id = item.Id, @Type="View" })'" />
+                                        <input type="button" class="btn btn-block btn-primary btn-sm btn-delete" value="Delete" onclick="if (confirm('Are you sure you want to delete?')) location.href='@Url.Action( "ChildList", "ChildList", new { Id = item.Id, @Type = "Delete" })'" />
                                     </td>
                                 </tr>
                             </tbody>
                         }
-                        </table>
-                    </div>
+                    </table>
+                </div>
                 <div class="row" style="padding-top:10px">
                     <div class="col-md-11">
                         <table cellpadding="0" cellspacing="0">
@@ -81,11 +101,11 @@
                         <input type="hidden" id="hfCurrentPageIndex" name="currentPageIndex" />
                     </div>
                     <div class="col-md-1">
-                        <input type="button" class="btn btn-block btn-primary btn-sm" value="Back" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" style="width: 180%;height: 40px;margin-left: -85%;" />
+                        <input type="button" class="btn btn-block btn-primary btn-sm" value="Back" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" style="width: 180% !important;height: 40px;margin-left: -85%;" />
 
                     </div>
                 </div>
-</fieldset>
+            </fieldset>
         }
         <script type="text/javascript">
             function PagerClick(index) {
