--- a/MRM/Views/MasterList/MasterList.cshtml
+++ b/MRM/Views/MasterList/MasterList.cshtml
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-   
+
     <style>
         fieldset {
             border: 1px solid #DDD;
@@ -20,6 +20,24 @@
         legend {
             font-size: 1.2em;
             font-weight: bold;
+        }
+
+        .btn-edit {
+            width: 50px !important;
+            float: left;
+        }
+
+        .btn-view {
+            width: 50px !important;
+            float: left;
+            margin-top: 0% !important;
+            margin-left: 3%;
+        }
+
+        .btn-delete {
+            width: 50px !important;
+            float: right;
+            margin-top: 0% !important;
         }
     </style>
 </head>
@@ -35,33 +53,35 @@
                             <tr>
                                 <th>Master Campaign ID</th>
                                 <th>Name</th>
-                                <th style="width:350px">Master Campaign Description</th>
+                                <th style="width:30%">Master Campaign Description</th>
                                 <th>Status</th>
-                                <th>Start Date</th>
-                                <th>End Date</th>
-                                <th>Action</th>
+                                <th style="width:10%;">Start Date</th>
+                                <th style="width:10%;">End Date</th>
+                                <th style="width:16%;">Action</th>
                             </tr>
                         </thead>
                         <tbody>
-                                @foreach (var item in Model.MasterCampaigns)
-                                {
-                                    <tr>
-                                        <td>M-@item.Id</td>
-                                        <td>@Html.ActionLink((item.Name), "ChildListById", "ChildList", new { Id = item.Id }, null)</td>
-                                        <td>@item.CampaignDescription</td>
-                                        <td>@item.Status</td>
-                                        <td>@item.StartDate</td>
-                                        <td>@item.EndDate</td>
-                                        <td>
-                                        <input type="button" class="btn btn-block btn-danger btn-sm" value="Delete" onclick="location.href='@Url.Action( "MasterCampaign", "MasterCampaign")'" />
-                                        </td>
-                                    </tr>
+                            @foreach (var item in Model.MasterCampaigns)
+                            {
+                                <tr>
+                                    <td>M-@item.Id.ToString("0000000")</td>
+                                    <td>@Html.ActionLink((item.Name==null?"----":item.Name), "ChildListById", "ChildList", new { Id = item.Id }, null)</td>
+                                    <td>@item.CampaignDescription</td>
+                                    <td>@item.Status</td>
+                                    <td>@item.StartDate.ToString("dd-MM-yyyy")</td>
+                                    <td>@item.EndDate.ToString("dd-MM-yyyy")</td>
+                                    <td>
+                                        <input type="button" class="btn btn-block btn-primary btn-sm btn-edit" value="Edit" onclick="location.href='@Url.Action( "MasterCampaign", "MasterCampaign", new { Id = item.Id })'" />
+                                        <input type="button" class="btn btn-block btn-primary btn-sm btn-view" value="View" onclick="location.href='@Url.Action( "MasterList", "MasterList", new { @Id = item.Id, @Type="View" })'" />
+                                        <input type="button" class="btn btn-block btn-primary btn-sm btn-delete" value="Delete" onclick="if (confirm('Are you sure you want to delete?')) location.href='@Url.Action( "MasterList", "MasterList", new {Id = item.Id, @Type = "Delete"})'" />
+                                    </td>
+                                </tr>
 
-                                }
+                            }
                         </tbody>
                     </table>
                 </div>
-               
+
                 <div class="row" style="padding-top:10px">
                     <div class="col-md-11">
                         <table cellpadding="0" cellspacing="0">
@@ -84,15 +104,15 @@
                         <input type="hidden" id="hfCurrentPageIndex" name="currentPageIndex" />
                     </div>
                     <div class="col-md-1">
-                        <input type="button" class="btn btn-block btn-primary btn-sm" value="Back" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" style="width: 180%;height: 40px;margin-left: -85%;" />
+                        <input type="button" class="btn btn-block btn-primary btn-sm" value="Back" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" style="width: 180% !important;height: 40px;margin-left: -85%;" />
 
                     </div>
                 </div>
             </fieldset>
         }
 
-              
-            </div>
+
+    </div>
 </body>
 </html>
 
